--- a/config/.rubocop.yml
+++ b/config/.rubocop.yml
@@ -11,6 +11,9 @@ Style/StringLiteralsInInterpolation:
   Enabled: false
   EnforcedStyle: single_quotes
 
+Style/FrozenStringLiteralComment:
+  Enabled: false
+
 Metrics/LineLength:
   # This will disable the rule completely, regardless what other options you put
   Enabled: false
