--- a/config/.rubocop.yml
+++ b/config/.rubocop.yml
@@ -1,4 +1,6 @@
-Style/StringLiterals:
+Style/StringLitera
+resources :photos, only: [:index, :show]
+ls:
   Description: Checks if uses of quotes match the configured preference.
   StyleGuide: https://github.com/bbatsov/ruby-style-guide#consistent-string-literals
   Enabled: false
@@ -14,7 +16,7 @@ Style/StringLiteralsInInterpolation:
 Style/FrozenStringLiteralComment:
   Enabled: false
 
-Style/Documentation: 
+Style/Documentation:
   Enabled: false
 
 Metrics/LineLength:
