--- a/.travis.yml
+++ b/.travis.yml
@@ -26,4 +26,4 @@ script: "bundle exec rake db:test:prepare"
 before_script:
   psql -c 'create database my_app_test' -U postgres
 
-script: bundle exec rspec spec
+script: "bundle exec rspec spec"
