--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,15 @@
 sudo: required
 env:
-  DB=postgresql
-  OS_TYPE=centos OS_VERSION=7
+  matrix:
 
+  - OS_TYPE=centos OS_VERSION=7
 
 services:
   - docker
+  - postgresql
+
+  before_script:
+  - psql -c 'create database travis_ci_test;' -U postgres
 
 before_install:
   - sudo apt-get update
@@ -20,10 +24,6 @@ script:
 - tests/setup_tests.sh ${OS_VERSION}
 language: ruby
 rvm:
-  - 2.3.3
-script: "bundle exec rake db:test:prepare"
-        "bundle exec rspec spec/"
-before_script:
-  psql -c 'create database my_app_test' -U postgres
-
-script: "bundle exec rspec spec"
+  - 2.3
+script:
+  - bundle exec rspec
