--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: required
 env:
   matrix:
   - OS_TYPE=centos OS_VERSION=7
@@ -6,14 +5,13 @@ env:
 services:
   - postgresql
 
-before_script:
-  - cp config/database.travis.yml config/database.yml
-  - psql -c 'create database travis_ci_test;' -U postgres
-
 language: ruby
 rvm:
   - 2.3.3
 
+before_script:
+    # - cp config/database.travis.yml config/database.yml
+    - psql -c 'create database travis_ci_test;' -U postgres
+
 script:
-  - bundle exec rails db:test:prepare
   - bundle exec rspec
