--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ rvm:
   - 2.3.3
 
 before_script:
-    # - cp config/database.travis.yml config/database.yml
+    - cp config/database.travis.yml config/database.yml
     - psql -c 'create database travis_ci_test;' -U postgres
 
 script:
