--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
-env:
-  matrix:
-  - OS_TYPE=centos OS_VERSION=7
+# env:
+#   matrix:
+#   - OS_TYPE=centos OS_VERSION=7
 
 services:
   - postgresql
