--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,4 @@ before_script:
     - psql -c 'create database travis_ci_test;' -U postgres
 
 script:
-  - bundle exec rspec
+  - bundle exec rspec spec
