--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,3 @@
-# env:
-#   matrix:
-#   - OS_TYPE=centos OS_VERSION=7
-
 services:
   - postgresql
 
@@ -10,8 +6,8 @@ rvm:
   - 2.3.3
 
 before_script:
-    - cp config/database.travis.yml config/database.yml
-    - psql -c 'create database travis_ci_test;' -U postgres
+  - cp config/database.travis.yml config/database.yml
+  - psql -c 'create database travis_ci_test;' -U postgres
 
 script:
-  - bundle exec rspec spec
+  - bundle exec rspec
